Add translation string for application version

--- a/custom_components/aguaiot/translations/fr.json
+++ b/custom_components/aguaiot/translations/fr.json
@@ -15,6 +15,7 @@
                     "login_api_url": "URL de login (facultatif, précisez seulement si nécessaire)",
                     "customer_code": "Code de la marque",
                     "brand_id": "ID de la marque (par défaut: 1)",
+                    "api_login_application_version": "Version de l'application",
                     "email": "Adresse email",
                     "password": "Mot de passe"
                 },
