--- a/custom_components/aguaiot/translations/de.json
+++ b/custom_components/aguaiot/translations/de.json
@@ -15,6 +15,7 @@
                     "login_api_url": "Zusätzlicher URL für Anmeldung-API (optional, nur eingeben wenn vorhanden)",
                     "customer_code": "Kundenkode für die Handelsmarke",
                     "brand_id": "ID der Handelsmarke (default: 1)",
+                    "api_login_application_version": "Programm version",
                     "email": "Emailadresse",
                     "password": "Passwort"
                 },
