--- a/custom_components/aguaiot/translations/en.json
+++ b/custom_components/aguaiot/translations/en.json
@@ -15,6 +15,7 @@
                     "login_api_url": "Separate login API URL (optional, only specify when needed)",
                     "customer_code": "Customer code of brand",
                     "brand_id": "Brand id (by default: 1)",
+                    "api_login_application_version": "Application version",
                     "email": "Email address",
                     "password": "Password"
                 },
