--- a/custom_components/aguaiot/translations/de.json
+++ b/custom_components/aguaiot/translations/de.json
@@ -17,7 +17,8 @@
                     "brand_id": "ID der Handelsmarke (default: 1)",
                     "api_login_application_version": "Programm version",
                     "email": "Emailadresse",
-                    "password": "Passwort"
+                    "password": "Passwort",
+                    "endpoint": "App name/marke"
                 },
                 "description": "Geben Sie die Agua IOT Parameter ein"
             }
