--- a/custom_components/aguaiot/translations/fr.json
+++ b/custom_components/aguaiot/translations/fr.json
@@ -17,7 +17,8 @@
                     "brand_id": "ID de la marque (par défaut: 1)",
                     "api_login_application_version": "Version de l'application",
                     "email": "Adresse email",
-                    "password": "Mot de passe"
+                    "password": "Mot de passe",
+                    "endpoint": "App nom/marque"
                 },
                 "description": "Remplissez les paramètres Agua IOT"
             }
