--- a/custom_components/aguaiot/translations/nl.json
+++ b/custom_components/aguaiot/translations/nl.json
@@ -17,7 +17,8 @@
                     "brand_id": "Merk id (standaard: 1)",
                     "api_login_application_version": "Applicatie versie",
                     "email": "Email adres",
-                    "password": "Wachtwoord"
+                    "password": "Wachtwoord",
+                    "endpoint": "App naam/merk"
                 },
                 "description": "Vul Agua IOT parameters in"
             }
