--- a/custom_components/aguaiot/translations/pt.json
+++ b/custom_components/aguaiot/translations/pt.json
@@ -17,7 +17,8 @@
                     "brand_id": "Identificador da marca  (por defeito: 1)",
                     "api_login_application_version": "Versão de aplicação",
                     "email": "Email",
-                    "password": "Senha"
+                    "password": "Senha",
+                    "endpoint": "App nome/marca"
                 },
                 "description": "Preencher com os parametros de Agua IOT "
             }
