--- a/custom_components/aguaiot/translations/nl.json
+++ b/custom_components/aguaiot/translations/nl.json
@@ -31,7 +31,8 @@
                 "title": "Micronova Agua IOT opties",
                 "data": {
                     "air_temp_fix": "[Jolly Mec] Negeer foutieve air temperature bij gebruik van een externe thermostaat.",
-                    "reading_error_fix": "[Bronpi] Filter foutieve waardes (wanneer kachel geen stroom heeft)."
+                    "reading_error_fix": "[Bronpi] Filter foutieve waardes (wanneer kachel geen stroom heeft).",
+                    "language": "Taal voor beschrijvingen"
                 }
             }
         }
