--- a/custom_components/aguaiot/translations/en.json
+++ b/custom_components/aguaiot/translations/en.json
@@ -31,7 +31,8 @@
                 "title": "Micronova Agua IOT options",
                 "data": {
                     "air_temp_fix": "[Jolly Mec] Ignore incorrect air temperature when using external themostat.",
-                    "reading_error_fix": "[Bronpi] Filter incorrect readings (when stove is without power)."
+                    "reading_error_fix": "[Bronpi] Filter incorrect readings (when stove is without power).",
+                    "language": "Language for descriptions"
                 }
             }
         }
