--- a/custom_components/aguaiot/translations/nl.json
+++ b/custom_components/aguaiot/translations/nl.json
@@ -34,7 +34,8 @@
                     "reading_error_fix": "[Bronpi] Filter foutieve waardes (wanneer kachel geen stroom heeft).",
                     "http_timeout": "Timeout voor API verzoeken (seconden).",
                     "buffer_read_timeout": "Timeout voor kachel buffer uitlezen (seconden).",
-                    "language": "Taal voor beschrijvingen."
+                    "language": "Taal voor beschrijvingen.",
+                    "update_interval": "Tijd tussen updates (seconden)."
                 }
             }
         }
